[package]
name = "scroll-video-tauri"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "scroll_video_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]
